small security fix

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
